adding all of fragment and toast for each fragment

--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -10,9 +10,9 @@
         android:icon="@drawable/baseline_calendar_month_24"
         android:title="Appointment" />
     <item
-        android:id="@+id/sicknessItem"
+        android:id="@+id/healthRecordItem"
         android:icon="@drawable/baseline_library_books_24"
-        android:title="Sickness" />
+        android:title="Health Record" />
     <item
         android:id="@+id/accountItem"
         android:icon="@drawable/baseline_account_circle_24"
