--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/bottomNavFrameLayout"
+        android:id="@+id/btmHW_Layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_dynamic_primary60">
+        android:background="@color/sky">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNav"
+            android:id="@+id/btmHW_Nav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
