--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountFragment"
-    android:id="@+id/accountLayout"
-    tools:ignore="InvalidId">
-
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account Fragment" />
+    tools:context=".SignUpFragment"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,16 +26,16 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:text="Username/gmail:" />
 
             <EditText
-                android:id="@+id/edtUS"
+                android:id="@+id/edtUS2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginTop="20dp"
+                android:layout_weight="1"
                 android:ems="10"
                 android:hint="Username/gmail"
                 android:inputType="text" />
@@ -63,28 +54,27 @@
                 android:text="Password" />
 
             <EditText
-                android:id="@+id/edtPW"
+                android:id="@+id/edtPW2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnSignIn"
+                android:id="@+id/btnSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="Sign in"
-                android:layout_marginRight="20dp"/>
+                android:text="Sign up" />
 
             <Button
                 android:id="@+id/button2"
@@ -94,12 +84,14 @@
                 android:text="Google Account" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btnSignUp"
-            android:layout_width="310dp"
+        <TextView
+            android:id="@+id/tvError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:layout_height="60dp"
-            android:text="You don't have account?" />
-    </LinearLayout>
+            android:text="TextView" />
 
+    </LinearLayout>
 </FrameLayout>
