--- a/app/src/main/res/layout/fragment_account_detail.xml
+++ b/app/src/main/res/layout/fragment_account_detail.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageAva"
             android:layout_width="match_parent"
             android:layout_height="155dp"
             android:src="@drawable/baseline_account_circle_24" />
