Able to add appointments with user ID (no constraints)

--- a/app/src/main/res/layout/fragment_account_detail.xml
+++ b/app/src/main/res/layout/fragment_account_detail.xml
@@ -19,6 +19,12 @@
             android:layout_height="155dp"
             android:src="@drawable/baseline_account_circle_24" />
 
+        <Button
+            android:id="@+id/btnChangeAvatar_AccDetail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Change Avatar" />
+
         <TextView
             android:id="@+id/tvUN"
             android:layout_width="match_parent"
