Done Login SignUp

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePassword">
+    tools:context=".ChangePassword"
+    android:background="@drawable/background"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,7 +13,18 @@
         android:orientation="vertical"
         android:padding="20sp"
         android:layout_marginTop="100sp"
+
         >
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="30sp"
+            android:layout_marginBottom="20sp"
+            android:textStyle="bold"
+            android:text="CHANGE PASSWORD" />
 
         <TextView
             android:id="@+id/textView3"
@@ -26,6 +39,13 @@
             android:ems="10"
             android:inputType="textPassword" />
 
+        <Button
+            android:id="@+id/btnAuthenticatePassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20sp"
+            android:text="CONfirm" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
@@ -35,6 +55,20 @@
 
         <EditText
             android:id="@+id/edtChangePassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/txtComfirmPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Comfirm your new password"
+            android:layout_marginTop="50sp" />
+
+        <EditText
+            android:id="@+id/edtComfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
