--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="indigo">#673AB7</color>
     <color name="violet">#BD73EC</color>
     <color name="dark_blue">#1F72B5</color>
+    <color name="deep_blue">#16456C</color>
 </resources>
