--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/medical_background"
     tools:context=".HomeFragment">
 
     <LinearLayout
@@ -50,8 +49,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:padding="10dp"
+            android:layout_height="200dp"
+            android:background="@drawable/homepage_layout"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -59,7 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:gravity="center_vertical"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
+                android:paddingLeft="15dp"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:text="Upcoming Appointment" />
@@ -69,8 +70,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
                 android:textSize="23.5sp"
-                android:textColorHint="@color/dark_blue"
+                android:paddingLeft="10dp"
+                android:textColorHint="@color/deep_blue"
                 android:textStyle="bold"
                 android:hint="Upcoming Appointments..."/>
 
@@ -79,45 +82,52 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_blue"
+                android:layout_marginTop="5dp"
                 android:textAllCaps="false"
                 android:text="All Appointment" />
 
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:text="Next Appointments"
+            android:textColor="@color/deep_blue"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="25dp"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:padding="10dp"
+            android:background="@drawable/homepage_layout_1"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
+                android:id="@+id/tvDoctor"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:text="Next Appointments" />
+                android:gravity="center"
+                android:layout_weight="1"
+                android:hint="Doctor..."
+                android:textColorHint="@color/black"
+                android:textSize="17sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvDoctor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="17sp"
-                    android:textColorHint="@color/black"
-                    android:hint="Doctor..."/>
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:textSize="17sp"
-                    android:textColorHint="@color/black"
-                    android:hint="Time..."/>
-            </LinearLayout>
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:hint="Time..."
+                android:textColorHint="@color/black"
+                android:textSize="17sp" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
