--- a/app/src/main/res/drawable/homepage_layout_1.xml
+++ b/app/src/main/res/drawable/homepage_layout_1.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#DDE3A7"/>
+    <solid android:color="#E0E4B9"/>
     <corners
         android:radius="22dp"/>
 
