--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/hilltops_mountains"
         android:orientation="vertical">
 
         <LinearLayout
@@ -87,19 +88,20 @@
                 android:textAllCaps="false"
                 android:text="All Appointment" />
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center_vertical"
-                android:text="Next Appointments"
-                android:textColor="@color/deep_blue"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="25dp"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:text="Next Appointments"
+            android:textColor="@color/deep_blue"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="25dp"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
