--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -14,8 +14,8 @@
         <ImageView
             android:id="@+id/img_avatar"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_height="47dp"
+            android:background="@drawable/baseline_account_circle_24"/>
 
         <TextView
             android:id="@+id/tvDoctorName_Spinner"
