--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -113,6 +113,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_blue"
                         android:text="Sign in" />
 
                     <Button
@@ -120,6 +121,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_blue"
                         android:text="Google Account" />
 
                 </LinearLayout>
@@ -129,7 +131,7 @@
                     android:layout_width="310dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
-
+                    android:backgroundTint="@color/dark_blue"
                     android:text="You don't have account?" />
             </LinearLayout>
 
