--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -52,6 +52,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
+                        android:layout_marginLeft="5dp"
                         android:layout_weight="1"
                         android:text="Gmail:" />
 
@@ -62,6 +63,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:layout_marginLeft="15dp"
                         android:hint="Gmail"
                         android:inputType="text" />
                 </LinearLayout>
@@ -76,6 +78,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginLeft="5dp"
                         android:text="Password" />
 
                     <EditText
@@ -98,15 +101,21 @@
                         android:id="@+id/btnSignUp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
                         android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/dark_blue"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="5dp"
                         android:text="Sign up" />
 
                     <Button
                         android:id="@+id/button2"
-                        android:layout_width="200dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_blue"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="5dp"
                         android:text="Google Account" />
                 </LinearLayout>
 
