doing retriving the next appointment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,24 +109,24 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvDoctor"
+                    android:id="@+id/tvRetrieveTime"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:layout_weight="1"
-                    android:hint="Doctor..."
+                    android:hint="Datetime..."
                     android:textColorHint="@color/black"
-                    android:textSize="17sp" />
+                    android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/tvDateTime"
+                    android:id="@+id/tvRetrieveSympton"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:layout_weight="1"
-                    android:hint="Time..."
+                    android:hint="Sympton..."
                     android:textColorHint="@color/black"
-                    android:textSize="17sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
         </LinearLayout>
 </FrameLayout>
