--- a/app/src/main/res/layout/activity_upload_user_avatar1.xml
+++ b/app/src/main/res/layout/activity_upload_user_avatar1.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hilltops_mountains"
     tools:context=".UploadUserAvatar1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/background"
         >
 
         <androidx.cardview.widget.CardView
@@ -32,7 +32,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="30sp"
                     android:text="Upload Avatar"
-                    android:textColor="#F0C27B"
+                    android:textColor="@color/deep_blue"
                     android:textSize="50sp"
                     android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="20sp"
                     android:layout_marginBottom="20sp"
-                    android:background="#F0C27B"
+                    android:backgroundTint="@color/dark_blue"
                     android:text="Choose Avatar" />
 
                 <Button
@@ -58,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:backgroundTint="@color/dark_blue"
                     android:text="Change Avatar" />
             </LinearLayout>
 
