--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -44,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
-            android:text="CONfirm" />
+            android:backgroundTint="@color/dark_blue"
+            android:text="Confirm" />
 
         <TextView
             android:id="@+id/textView4"
@@ -78,6 +79,7 @@
             android:id="@+id/btnChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/dark_blue"
             android:text="CHANGE" />
 
     </LinearLayout>
