--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -47,8 +47,9 @@
             </LinearLayout>
             <Button
                 android:id="@+id/btnChangeName"
-                android:layout_width="200sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/dark_blue"
                 android:text="Change Name"
                 android:layout_gravity="center"/>
 
