--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,20 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".AccountFragment"
     android:id="@+id/accountLayout"
+    android:background="@drawable/hilltops_mountains"
     tools:ignore="InvalidId">
 
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account Fragment" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/background">
+        >
 
         <ImageView
             android:id="@+id/imageView"
@@ -37,19 +33,20 @@
             android:gravity="center"
             android:textSize="40sp"
             android:textStyle="bold"
-            android:textColor="#F0C27B"
+            android:textColor="@color/deep_blue"
             android:text="WELCOME" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="370sp"
             android:layout_height="420sp"
             android:layout_gravity="center"
-            app:cardCornerRadius="5dp"
+            app:cardCornerRadius="23dp"
             android:layout_marginTop="20sp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/homepage_layout"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -64,6 +61,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Gmail:"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:layout_marginRight="20sp"/>
 
@@ -73,6 +71,7 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="Gmail"
+                        android:layout_marginLeft="15dp"
                         android:inputType="text" />
                 </LinearLayout>
 
@@ -89,6 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20sp"
                         android:textStyle="bold"
+                        android:textSize="18sp"
                         android:text="Password" />
 
                     <EditText
