done change password layout

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -24,12 +24,15 @@
             android:textSize="30sp"
             android:layout_marginBottom="20sp"
             android:textStyle="bold"
+            android:textColor="@color/deep_blue"
             android:text="CHANGE PASSWORD" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@color/black"
             android:text="Your current password" />
 
         <EditText
@@ -37,7 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:hint="Input your current password"/>
 
         <Button
             android:id="@+id/btnAuthenticatePassword"
@@ -52,6 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Your new password"
+            android:textSize="18sp"
+            android:textColor="@color/black"
             android:layout_marginTop="50sp"/>
 
         <EditText
@@ -59,13 +65,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:hint="Input the new password"/>
 
         <TextView
             android:id="@+id/txtComfirmPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Comfirm your new password"
+            android:textSize="18sp"
+            android:text="Confirm your new password"
+            android:textColor="@color/black"
             android:layout_marginTop="50sp" />
 
         <EditText
@@ -73,7 +82,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:hint="Input new password one more time"/>
 
         <Button
             android:id="@+id/btnChangePassword"
