--- a/app/src/main/res/layout/activity_history_app.xml
+++ b/app/src/main/res/layout/activity_history_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".HistoryApp">
+    tools:context=".Controller.HistoryApp">
 
     <LinearLayout
         android:layout_width="match_parent"
