--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountFragment"
+    tools:context=".View.AccountFragment"
     android:id="@+id/accountLayout"
     android:background="@drawable/hilltops_mountains"
     tools:ignore="InvalidId">
