--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C6DDEF"
-    tools:context=".HistoryFragment">
+    tools:context=".View.HistoryFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
